[project]
name = "testproject"
version = "0.1.0"
description = "testProject using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.10.1"
]

[project.scripts]
testproject = "testproject.main:run"
run_crew = "testproject.main:run"
train = "testproject.main:train"
replay = "testproject.main:replay"
test = "testproject.main:test"
run_with_trigger = "testproject.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
